[gd_scene load_steps=2 format=3 uid="uid://cbcgni5mmqi3u"]

[ext_resource type="Script" uid="uid://cxg5wpdqo8gdc" path="res://scripts/defeat_screen.gd" id="1_0vqnf"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0vqnf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 282.0
offset_right = 708.0
offset_bottom = 386.0

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Сыграть снова"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "В главное меню"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 487.0
offset_top = 168.0
offset_right = 670.0
offset_bottom = 210.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Поражение!"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_menu_pressed"]
